# EudoraX

./: .gitignore  App.tsx  DOCS.md  LICENSE  README.md  agents.md  constants.tsx  database.ts  eslint.config.js  index.css  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts  types.ts
Downloads/: README.md
Main/: App.tsx  Dashboard.tsx  RightPanel.tsx
Main/atoms/: Button.tsx  Card.tsx  Icon.tsx
Unittestfolder/: test_hardware_tracing.py  test_mock_unity_export.py
backend/: __init__.py  firebase_config.py  functions.py  main.py  models.py  orchestrator.py  requirements.txt  synthesis.py
backend/kernels/: analysis.py  vision.py
backend/mcp/: qdrant_server.py
backend/monitoring/: telemetry.py
backend/tools/: controlnet.py  depthmap.py  lora_training.py  nvidia_denoider.py  openpose.py  realesrgan.py  vllm.py
components/: AdminPanel.tsx  BackendGenerator.tsx  Button.tsx  Icons.tsx  Sidebar.tsx
components/ModuleStore/: ModuleStore.tsx
components/ModuleStore/GeminiStudio/: GeminiAgent.tsx  GeminiAssets.tsx  GeminiAuth.tsx  GeminiCode.tsx  GeminiErrorHandler.tsx  GeminiLoRA.tsx  GeminiNano.tsx  GeminiPixel.tsx  GeminiSensor.tsx  GeminiStudio.tsx  GeminiVeo.tsx
components/Modules/GeminiStudio/: GeminiAgent.tsx  GeminiAssets.tsx  GeminiAuth.tsx  GeminiCode.tsx  GeminiErrorHandler.tsx  GeminiFilterFunctions.ts  GeminiImg2Img.tsx  GeminiInpainting.tsx  GeminiLoRA.tsx  GeminiNano.tsx  GeminiNodeStudio.tsx  GeminiPixel.tsx  GeminiProfile.tsx  GeminiSensor.tsx  GeminiStudio.tsx  GeminiTxt2Img.tsx  GeminiUpscaler.tsx  GeminiVeo.tsx  GeminiVoice.tsx
components/Modules/GoogleStudio/: GoogleAgent.tsx  GoogleAssets.tsx  GoogleAuth.tsx  GoogleCode.tsx  GoogleErrorHandler.tsx  GoogleLoRA.tsx  GoogleNano.tsx  GooglePixel.tsx  GoogleSensor.tsx  GoogleStudio.tsx  GoogleVeo.tsx
components/Modules/GoogleStudio/ImageGenerator/: ImageGeneration_txttoimage.tsx  ImageGenerator.tsx  imagegeneratorfilterfunction.tsx  types.ts
components/Modules/Image_Generator/: ImageGeneration_txttoimage.tsx  ImageGenerator.tsx  imagegeneratorfilterfunction.tsx  types.ts
components/Modules/VideoGenerator/: VideoGenerator.tsx
components/Modules/VoiceGenerator/: VoiceGenerator.tsx
components/admin/: ApiSettings.tsx  LocalIntelligence.tsx  McpSettings.tsx  backend_spec.md
plugins/: geminiStudioActions.ts  imageStudioActions.ts
plugins/gemini/: geminiPlugin.ts
services/: chromeAiService.ts  configService.ts  geminiService.ts
src/: App.jsx  styles.css
src/eudorax_backend/: __init__.py  __main__.py  app.py  config.py  main.py  services.py
