[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eudorax-backend"
version = "0.1.0"
description = "Cutting-edge async Python backend with FastAPI, Arrow/Polars, HF, and vector search clients"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "EudoraX"}]
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "uvloop>=0.21.0",
  "pyarrow>=21.0.0",
  "polars>=1.32.3",
  "numba>=0.62.0",
  "tokenizers>=0.21.4",
  "transformers>=4.56.1",
  "qdrant-client>=1.15.1",
  "pymilvus>=2.6.1",
  "opencv-python-headless>=4.12.0.88",
  "realesrgan>=0.3.0",
  "torch>=2.9.0.dev20260201",
  "torchvision>=0.24.0.dev20260201",
]

[project.optional-dependencies]
gpu = [
  "xformers>=0.0.33",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = [
  "https://download.pytorch.org/whl/nightly/cu131",
]
