[project]
name = "eudorax-backend"
version = "0.1.0"
description = "Cutting-edge async Python backend scaffold for AI inference, vector search, and upscaling workflows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "uvloop>=0.21.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "orjson>=3.10.0",
  "polars>=1.22.0",
  "pyarrow>=19.0.0",
  "numba>=0.61.0",
  "numpy>=2.2.0",
  "tokenizers>=0.21.0",
  "transformers>=4.49.0",
  "huggingface-hub>=0.29.0",
  "accelerate>=1.4.0",
  "qdrant-client>=1.13.0",
  "pymilvus>=2.5.0",
  "opencv-python-headless>=4.11.0.86",
  "realesrgan>=0.3.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
torch-nightly-cu131 = [
  "torch",
  "torchvision",
  "torchaudio",
]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
  { index = "pytorch-nightly-cu131" },
]
torchvision = [
  { index = "pytorch-nightly-cu131" },
]
torchaudio = [
  { index = "pytorch-nightly-cu131" },
]

[[tool.uv.index]]
name = "pytorch-nightly-cu131"
url = "https://download.pytorch.org/whl/nightly/cu131"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
